chore: updated various configs

--- a/libraries/components/tsconfig.json
+++ b/libraries/components/tsconfig.json
@@ -4,17 +4,34 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
+    "declaration": true,
+    "outDir": "lib",
+    "composite": true,
     "jsx": "react-jsx",
     "allowJs": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": false,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types"],
     "strict": true,
     "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["./src", "**/*.ts", "**/*.tsx"],
+  "exclude": ["../../node_modules", "./node_modules", "lib/**/*"]
 }
