--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "@publiekepartner/components",
-  "description": "Reusable component library for Publieke Partner",
+  "name": "@publiekepartner/website",
+  "description": "Website for Publieke Partner",
   "version": "0.0.1",
   "author": "Matthijs van Boven",
   "license": "UNLICENSED",
   "private": true,
-  "main": "./src/index.ts",
   "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/MatthijsvBoven/publieke-partner.git"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
     "@mui/material": "^5.15.19",
+    "@next/bundle-analyzer": "^14.2.3",
+    "@publiekepartner/components": "workspace:*",
     "next": "^14.2.3",
+    "next-seo": "^6.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.8"
   },
   "scripts": {
-    "build": "tsc",
+    "analyze": "ANALYZE=true next build",
+    "build": "next build",
     "eslint-check": "eslint --quiet .",
     "eslint-fix": "eslint --fix .",
     "prettier-check": "prettier --check .",
     "prettier-fix": "prettier --write .",
-    "start": "tsc -w"
+    "start": "next dev -p 3000",
+    "start-prod": "next start -p 3000"
   }
 }
