--- a/libraries/components/package.json
+++ b/libraries/components/package.json
@@ -25,7 +25,9 @@
     "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@babel/plugin-transform-runtime": "^7.24.6",
     "@fontsource/open-sans": "^5.0.28",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/system": "^5.15.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
