feat: added footer to page layout

--- a/packages/website/tsconfig.json
+++ b/packages/website/tsconfig.json
@@ -1,31 +1,25 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext", "es6", "esnext.intl", "es2017.intl", "es2018.intl"],
     "target": "es6",
-    "module": "ESNext",
-    "declaration": true,
-    "moduleDetection": "force",
-    "jsx": "preserve",
+    "lib": ["dom", "dom.iterable", "esnext", "es6", "esnext.intl", "es2017.intl", "es2018.intl"],
     "allowJs": true,
-    "moduleResolution": "node",
+    "declaration": true,
+    "skipLibCheck": true,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "resolveJsonModule": true,
+    "noEmit": true,
     "incremental": true,
     "inlineSourceMap": true,
     "inlineSources": true,
     "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "resolveJsonModule": true,
+    "jsx": "preserve",
+    "allowImportingTsExtensions": true,
     "strictNullChecks": true,
-    "noEmit": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noPropertyAccessFromIndexSignature": false,
     "typeRoots": ["./node_modules/@types"],
     "isolatedModules": true,
     "plugins": [
@@ -34,6 +28,6 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "./utils"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules", "**/*.config.ts", "**/*.config.js"]
 }
