--- a/libraries/components/package.json
+++ b/libraries/components/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
+    "@types/react": "^18.3.3",
     "webpack": "^5.91.0"
   },
   "scripts": {
