--- a/libraries/components/tsconfig.json
+++ b/libraries/components/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "lib": ["es6", "DOM"],
-    "target": "es6",
+    "lib": ["es6", "dom"],
+    "target": "es5",
     "module": "commonjs",
-    "moduleDetection": "force",
     "declaration": true,
     "outDir": "lib",
     "composite": true,
+    "strict": true,
     "jsx": "react-jsx",
     "allowJs": true,
     "noImplicitAny": true,
@@ -21,16 +21,9 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"],
-    "strict": true,
-    "skipLibCheck": true,
-    "noPropertyAccessFromIndexSignature": false
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": ["./src", "**/*.ts", "**/*.tsx"],
   "exclude": ["../../node_modules", "./node_modules", "lib/**/*"]
