--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,8 +13,8 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.19",
-    "@next/bundle-analyzer": "^14.2.3",
     "@publiekepartner/components": "workspace:*",
     "next": "^14.2.3",
     "next-seo": "^6.5.0",
@@ -22,6 +22,10 @@
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.8",
     "sharp": "^0.33.4"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.3",
+    "@types/react": "^18.3.3"
   },
   "scripts": {
     "analyze": "ANALYZE=true next build",
