--- a/libraries/components/.babelrc.json
+++ b/libraries/components/.babelrc.json
@@ -7,7 +7,8 @@
         "targets": {
           "chrome": 100,
           "safari": 15,
-          "firefox": 91
+          "firefox": 91,
+          "node": "current"
         }
       }
     ],
