--- a/libraries/components/package.json
+++ b/libraries/components/package.json
@@ -42,7 +42,13 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@happy-dom/global-registrator": "^14.12.0",
+    "@testing-library/dom": "^10.1.0",
+    "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "webpack": "^5.92.0"
   },
   "scripts": {
@@ -51,6 +57,7 @@
     "eslint-fix": "eslint --fix .",
     "prettier-check": "prettier --check .",
     "prettier-fix": "prettier --write .",
-    "start": "tsc -w"
+    "start": "tsc -w",
+    "test": "bun test"
   }
 }
