--- a/libraries/components/.babelrc.json
+++ b/libraries/components/.babelrc.json
@@ -12,7 +12,12 @@
         }
       }
     ],
-    "@babel/preset-react",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ],
     "@babel/preset-typescript"
   ],
   "plugins": []
