--- a/.github/workflows/github-actions-pipeline.yaml
+++ b/.github/workflows/github-actions-pipeline.yaml
@@ -1,6 +1,7 @@
 name: GitHub Actions Pipeline
 run-name: Build pipeline
-on: [push]
+on:
+  pull_request:
 jobs:
   Build-Pipeline:
     runs-on: ubuntu-latest
