--- a/libraries/components/package.json
+++ b/libraries/components/package.json
@@ -35,6 +35,7 @@
     "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
     "react-intl": "^6.6.8",
     "style-loader": "^4.0.0"
   },
